# Finance-expert-system

./: .gitignore  CMakeLists.txt
data/: knowledge_base.json
guide/: expert_guide.md  user_guide.md
include/controllers/: ExpertController.h  UserController.h
include/core/: Condition.h  InferenceEngine.h  KnowledgeBase.h  LinguisticVariable.h  Rule.h
include/defuz/: CenterAverageDefuzzifier.h  IDefuzzifier.h  MeanOfMaximaDefuzzifier.h
include/json/: KnowledgeBaseLoader.h  KnowledgeBaseSaver.h
include/membership/: GaussianFunction.h  GeneralizedGaussianFunction.h  IMembershipFunction.h  TrapezoidalFunction.h
include/operators/: ITConorm.h  ITNorm.h  MaxTConorm.h  MinTNorm.h  ProductTNorm.h
include/presentation/: ExpertView.h  UserView.h
src/: expert_main.cpp  main.cpp  user_main.cpp
